# k4a-calibration

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: calib_k4a.hpp  camera_extrinsics.hpp
src/: calib_k4a.cpp  camera_extrinsics.cpp
